# ClashForAndroid

./: .gitignore  NOTICE  PRIVACY_POLICY.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/ISSUE_TEMPLATE/: -english--feature-request.md  01-bug-report-en.md  02-feature-request-en.md  03-bug-report-zh-cn.md  04-feature-request-zh-cn.md  bug-report-en.md  bug-report-zh-cn.md  feature-request-zh-cn.md
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: simple_alpha.xml
app/src/main/res/color/: proxies_chip_colors.xml  proxies_chip_text_colors.xml
app/src/main/res/drawable/: ic_about.xml  (+39 more)
buildSrc/src/main/java/: GolangBindTask.kt  MMDBDowloadTask.kt
common/: build.gradle.kts
common/src/main/: AndroidManifest.xml
component/: build.gradle.kts
component/src/main/: AndroidManifest.xml
core/: build.gradle  build.gradle.kts  clash.gradle.kts  consumer-rules.pro
core/src/main/cpp/: CMakeLists.txt  bridge.c  defer.cpp  event_queue.cpp  event_queue.h  init.cpp  log.cpp  main.cpp  main.h  patch.cpp  query.cpp  tun.cpp
core/src/main/golang/: buffer.h  ccall.c  ccall.go  ccall.h  config.go  config.h  defer.go  event.c  event.go  event.h  general.go  general.h  go.mod  go.sum  log.go  main.c  main.go  proxies.go  proxies.h  traffic.go  traffic.h  tun.go
design/: build.gradle  build.gradle.kts
design/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
service/: build.gradle  build.gradle.kts
service/src/main/: AndroidManifest.xml
(+351 files in other folders)
